tests/NormalTests/paczka1/fuzzy1/15906233.err
Error in line 5: 7X A811 57,3
Error in line 4: 7XO S603 30,6
Error in line 9: vQvTmip S249 41,6
Error in line 11: vQvTmip A811 47,6
Error in line 7: 7XO A811 6,9
Error in line 26: S538 S603 12,8
Error in line 24: AmnvRe0Pa S603 59,7
Error in line 35: 7XO S603 32,3
Error in line 36: 7XO S538 70,7
